fix: improve selection style for dark mode

--- a/styles/app.css
+++ b/styles/app.css
@@ -1,6 +1,6 @@
 @layer base {
   *::selection {
-    @apply bg-teal-200 bg-opacity-80;
+    @apply bg-teal-200 bg-opacity-80 text-black dark:bg-teal-500 dark:bg-opacity-80 dark:text-white;
   }
 }
 
